Add treehaus website link

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 			<h1>My Portfolio</h1>
 
 			<article class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
-			  <h3>Title</h3>
+				<a href="http://treehaus.space"><img src="assets/img/portfolio/treehaus_screenshot1200x800.png" class="img-responsive"></a>
+			  <h3>Treehaus</h3>
         <p>Some info...</p>
         <h4>github link</h4>
       </article>
