Changed links and added pictures

--- a/index.html
+++ b/index.html
@@ -70,41 +70,25 @@
 	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
-			<h1>My Portfolio</h1>
+			<h1>Some Projects</h1>
 
 			<article class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="http://treehaus.space"><img src="assets/img/portfolio/treehaus_screenshot1200x800.png" class="img-responsive"></a>
+				<a href="http://treehaus.space"><img src="assets/img/portfolio/treehaus_screenshot1200x800.png"
+          class="img-responsive" height="400" width="600"></a>
 			  <h3>Treehaus</h3>
+        <p>A </p>
+        <h4>github link</h4>
+      </article>
+			<article class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href="work.html"><img src="assets/img/portfolio/3Dspace.png"
+          class="img-responsive"  height="400" width="600"></a>
+			  <h3>3D Space</h3>
         <p>Some info...</p>
         <h4>github link</h4>
       </article>
 			<article class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>
-			  <h3>Title</h3>
-        <p>Some info...</p>
-        <h4>github link</h4>
-      </article>
-			<article class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
-			  <h3>Title</h3>
-        <p>Some info...</p>
-        <h4>github link</h4>
-      </article>
-			<article class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>
-			  <h3>Title</h3>
-        <p>Some info...</p>
-        <h4>github link</h4>
-      </article>
-			<article class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio05.png" class="img-responsive"></a>
-			  <h3>Title</h3>
-        <p>Some info...</p>
-        <h4>github link</h4>
-      </article>
-			<article class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio06.png" class="img-responsive"></a>
-			  <h3>Title</h3>
+				<a href="work.html"><img src="assets/img/portfolio/ruby_chess.png" class="img-responsive"></a>
+			  <h3>Ruby Chess</h3>
         <p>Some info...</p>
         <h4>github link</h4>
       </article>
@@ -115,22 +99,10 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-dribbble"></i></a>
+					<a href="http://github.com/rtobin/"><i class="fa fa-github"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-facebook"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-twitter"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-linkedin"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-instagram"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-tumblr"></i></a>
+					<a href="http://www.linkedin.com/in/rytobin"><i class="fa fa-linkedin"></i></a>
 				</div>
 
 			</div><! --/row -->
@@ -145,10 +117,10 @@
 				</div>
 
 				<div class="col-lg-4">
-					<p>Living in the amazing London.</p>
+					<p>Working in the NYC area.</p>
 				</div>
 				<div class="col-lg-4">
-					<p>hello@instant.com</p>
+					<p>ryantobin248@gmail.com</p>
 				</div>
 			</div>
 		</div>
