added some about me info

--- a/about.html
+++ b/about.html
@@ -60,19 +60,19 @@
 			</div><! --/row -->
 	    </div> <!-- /container -->
 	</div><! --/aboutwrap -->
-	
+
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>PAUL SILVA</h2>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-				<p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-				<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-			</div>
+				<h2>RYAN TOBIN</h2>
+        <p>
+          My educational background is in Physics and Mathematics, and my research was focused on large computational tasks – specifically quantum lattice gas simulations, and using sensitive scientific instruments. I have ventured on both sides of scientific investigation: theory and experiment. I also try to stay up to date with state of the art technologies and consider myself a tech geek. I strive to be well rounded and I greatly enjoy challenges and opportunities to learn more.
+        </p>
+				</div>
 
 		</div><! --/row -->
 	</div><! --/container -->
-	
+
 	<div id="social">
 		<div class="container">
 			<div class="row centered">
@@ -94,7 +94,7 @@
 				<div class="col-lg-2">
 					<a href="#"><i class="fa fa-tumblr"></i></a>
 				</div>
-			
+
 			</div><! --/row -->
 		</div><! --/container -->
 	</div><! --/social -->
@@ -105,19 +105,19 @@
 				<div class="col-lg-4">
 					<p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
 				</div>
-			
+
 				<div class="col-lg-4">
 					<p>Living in the amazing London.</p>
 				</div>
 				<div class="col-lg-4">
 					<p>hello@instant.com</p>
 				</div>
-			
+
 			</div>
-		
+
 		</div>
 	</div><! --/footerwrap -->
-	
+
 
 
     <!-- Bootstrap core JavaScript
