--- a/about.html
+++ b/about.html
@@ -76,23 +76,11 @@
 	<div id="social">
 		<div class="container">
 			<div class="row centered">
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-dribbble"></i></a>
+        <div class="col-lg-2">
+					<a href="http://github.com/rtobin/"><i class="fa fa-github"></i></a>
 				</div>
 				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-facebook"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-twitter"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-linkedin"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-instagram"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="#"><i class="fa fa-tumblr"></i></a>
+					<a href="http://www.linkedin.com/in/rytobin"><i class="fa fa-linkedin"></i></a>
 				</div>
 
 			</div><! --/row -->
