changed footer in aboout

--- a/about.html
+++ b/about.html
@@ -90,15 +90,15 @@
 	<div id="footerwrap">
 		<div class="container">
 			<div class="row centered">
-				<div class="col-lg-4">
+        <div class="col-lg-4">
 					<p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
 				</div>
 
 				<div class="col-lg-4">
-					<p>Living in the amazing London.</p>
+					<p>Working in the NYC area.</p>
 				</div>
 				<div class="col-lg-4">
-					<p>hello@instant.com</p>
+					<p>ryantobin248@gmail.com</p>
 				</div>
 
 			</div>
