--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           class="img-responsive" height="400" width="600"></a>
 			  <h3>Treehaus</h3>
         <p>A </p>
-        <h4>github link</h4>
+        <a href="https://github.com/rtobin/Treehaus"><h4>github link</h4></a>
       </article>
 			<article class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="work.html"><img src="assets/img/portfolio/3Dspace.png"
@@ -90,7 +90,7 @@
 				<a href="work.html"><img src="assets/img/portfolio/ruby_chess.png" class="img-responsive"></a>
 			  <h3>Ruby Chess</h3>
         <p>Some info...</p>
-        <h4>github link</h4>
+        <a href="https://github.com/rtobin/RubyChess"><h4>github link</h4></a>
       </article>
 		</div><! --/row -->
 	</div><! --/container -->
@@ -113,7 +113,7 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-4">
-					<p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
+					<p><b>WEB DESIGNER, DEVELOPER & CURIOUS MIND</b></p>
 				</div>
 
 				<div class="col-lg-4">
