connected more links and updated about me

--- a/about.html
+++ b/about.html
@@ -63,11 +63,17 @@
 
 	<div class="container">
 		<div class="row centered mt mb">
-			<div class="col-lg-8 col-lg-offset-2">
+			<div id="some-stuff-about-me" class="col-lg-8 col-lg-offset-2">
 				<h2>RYAN TOBIN</h2>
         <p>
-          My educational background is in Physics and Mathematics, and my research was focused on large computational tasks – specifically quantum lattice gas simulations, and using sensitive scientific instruments. I have ventured on both sides of scientific investigation: theory and experiment. I also try to stay up to date with state of the art technologies and consider myself a tech geek. I strive to be well rounded and I greatly enjoy challenges and opportunities to learn more.
+          I have a passion for technology that brings to life new perspectives on foundational principles. The realization of transformative ideas in the broad informational sciences is something I am excited to be a part of.
         </p>
+<p>
+I am a New York-based web developer originally from Sacramento, CA. I have experience in Ruby, Rails, JavaScript, Python, SQL, HTML5/CSS and React. I am familiar with building up both the server side and client side of web applications using modern best practices for authentication/authorization, source control, and deployment. I am currently playing around with Node.js and Python web development frameworks and love exploring the many JavaScript libraries. For fun, I also recently started dabbling in the awesome library for 3D webgl projects called Three.js.
+<p/>
+<p>
+My educational background is in Physics and Mathematics where I researched quantum information (both experimental and theoretical). I am very curious in anything that attempts to change my perspective on the world, and I never stop exploring.
+</p>
 				</div>
 
 		</div><! --/row -->
