--- a/index.html
+++ b/index.html
@@ -76,20 +76,28 @@
 				<a href="http://treehaus.space"><img src="assets/img/portfolio/treehaus_screenshot1200x800.png"
           class="img-responsive" height="400" width="600"></a>
 			  <h3>Treehaus</h3>
-        <p>A </p>
+        <p>A project organization web app for managing project members, goals, and tasks. (basically a group effort todo list manager)</p>
         <a href="https://github.com/rtobin/Treehaus"><h4>github link</h4></a>
       </article>
-			<article class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/3Dspace.png"
+      <article class="col-lg-4 col-md-4 col-sm-4 gallery">
+        <a href="http://rtobin.github.io/BraveBarbers"><img src="assets/img/portfolio/brave_barbers.png"
           class="img-responsive"  height="400" width="600"></a>
-			  <h3>3D Space</h3>
-        <p>Some info...</p>
-        <h4>github link</h4>
+        <h3>BraveBarbers</h3>
+        <p>I am building a site to help people find barbers in their area. I am hoping to eventually grow this into a basic social network for barbers and their patrons (in progress)</p>
+          <a href="https://github.com/rtobin/BraveBarbers"><h4>github link</h4></a>
       </article>
 			<article class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/ruby_chess.png" class="img-responsive"></a>
-			  <h3>Ruby Chess</h3>
-        <p>Some info...</p>
+				<a href="space_game/earth.html"><img src="assets/img/portfolio/3Dspace.png"
+          class="img-responsive"  height="400" width="600"></a>
+			  <h3>3D Space</h3>
+        <p>A 3D space exploration experiment in Three.js. I am pretty much just using this as a playground to test some 3D ideas...</p>
+          <a href="https://github.com/rtobin/Treehaus"><h4>github link</h4></a>
+      </article>
+
+			<article class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href=""><img src="assets/img/portfolio/ruby_chess.png" class="img-responsive"></a>
+			  <h3>RubyChess</h3>
+        <p>A terminal chess game with basic AI. Displays available moves pieces eaten.</p>
         <a href="https://github.com/rtobin/RubyChess"><h4>github link</h4></a>
       </article>
 		</div><! --/row -->
