update treehaus pic

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
-			<h1>Some Projects</h1>
+			<h1>Projects</h1>
 
 			<article class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="http://treehaus.space"><img src="assets/img/portfolio/treehaus_screenshot1200x800.png"
+				<a href="http://treehaus.space"><img src="assets/img/portfolio/treehaus_sample.png"
           class="img-responsive" height="400" width="600"></a>
 			  <h3>Treehaus</h3>
         <p>A project organization web app for managing project members, goals, and tasks. (basically a group effort todo list manager)</p>
@@ -85,6 +85,14 @@
         <h3>BraveBarbers</h3>
         <p>I am building a site to help people find barbers in their area. I am hoping to eventually grow this into a basic social network for barbers and their patrons (in progress)</p>
           <a href="https://github.com/rtobin/BraveBarbers"><h4>github link</h4></a>
+      </article>
+      <article class="col-lg-4 col-md-4 col-sm-4 gallery">
+				<a href="http://rtobin.github.io/3DSnake"><img src="assets/img/portfolio/3dsnake.png"
+          class="img-responsive"  height="400" width="600"></a>
+			  <h3>3D Snake</h3>
+        <p>A 3D snake experiment in Three.js. Implements CSS3D and quaternionic algebra under the hood for visually natural and rotations.</p>
+        <a href="https://github.com/rtobin/3DSnake"><h4>github link</h4></a>
+
       </article>
 			<article class="col-lg-4 col-md-4 col-sm-4 gallery">
 				<a href="space_game/earth.html"><img src="assets/img/portfolio/3Dspace.png"
@@ -120,7 +128,7 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-4">
-					<p><b>WEB DESIGNER, DEVELOPER & CURIOUS MIND</b></p>
+					<p><b>WEB DEVELOPER & CURIOUS MIND</b></p>
 				</div>
 
 				<div class="col-lg-4">
