add resume to About.

--- a/about.html
+++ b/about.html
@@ -74,6 +74,8 @@ I am a New York-based web developer originally from Sacramento, CA. I have exper
 <p>
 My educational background is in Physics and Mathematics where I researched quantum information (both experimental and theoretical). I am very curious in anything that attempts to change my perspective on the world, and I never stop exploring.
 </p>
+
+<p>Check out my <a href="assets/Resume.pdf">resume</a>.</p>
 				</div>
 
 		</div><! --/row -->
